[gd_scene load_steps=4 format=3 uid="uid://crvh6i3q5a1p6"]

[ext_resource type="FontFile" uid="uid://elp7o4t3i2jp" path="res://Assets/User-Interface/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="1_0debm"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/Menus/EndCardMenu.gd" id="1_2pq2i"]
[ext_resource type="Theme" uid="uid://dt22awaj6rh47" path="res://Assets/User-Interface/Themes/ButtonTheme.tres" id="2_it0uk"]

[node name="EndCardMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pq2i")
level_select = "res://Scenes/Area1Scene.tscn"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Contents" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Contents"]
layout_mode = 2

[node name="LevelFinish" type="RichTextLabel" parent="HBoxContainer/Contents"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_0debm")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][rainbow]Level Complete![/rainbow][/center]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Contents"]
layout_mode = 2

[node name="Level" type="RichTextLabel" parent="HBoxContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("1_0debm")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]1-0

Testing"
fit_content = true

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/Contents"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 18
alignment = 1

[node name="LevelSelect" type="Button" parent="HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_it0uk")
theme_override_font_sizes/font_size = 30
text = "Level
Select"

[node name="RestartLevel" type="Button" parent="HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_it0uk")
theme_override_font_sizes/font_size = 30
text = "Restart
Level"

[node name="NextLevel" type="Button" parent="HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_it0uk")
theme_override_font_sizes/font_size = 30
text = "Next
Level"

[node name="MainMenu" type="Button" parent="HBoxContainer/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_it0uk")
theme_override_font_sizes/font_size = 30
text = "Main
Menu"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/Contents"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Contents/Buttons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="HBoxContainer/Contents/Buttons/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="HBoxContainer/Contents/Buttons/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="HBoxContainer/Contents/Buttons/MainMenu" to="." method="_on_main_menu_pressed"]
